...
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/moduleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/module_placeholder"
        android:height="45dp"
        android:textSize="20sp"
        android:layout_below="@+id/pageTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minWidth="210dp"
        android:maxWidth="250dp" />

    <EditText
        android:id="@+id/moduleGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="95dp"
        android:ems="10"
        android:hint="@string/module_grade"
        android:inputType="numberSigned"
...
        android:layout_toRightOf="@+id/moduleTitle"
        android:layout_toEndOf="@+id/moduleTitle"
        android:maxWidth="150dp"
        android:minWidth="100dp" />

    <Button
        android:id="@+id/addNewModuleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moduleTitle"
        android:layout_centerHorizontal="true"
        android:width="175dp"
        android:background="@color/mainAppColor"
...
            android:layout_marginTop="40dp"
            android:text="@string/average_percentage"
            android:textSize="25sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/overallClassificationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/overallClassificationTitle"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondaryAppColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/averagePercentageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/averagePercentageTitle"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondaryAppColor"
...
        android:minHeight="0dp"
        android:textSize="20sp"
        android:layout_below="@+id/moduleTitle"
        android:layout_alignStart="@+id/relativeLayout"
        android:layout_above="@+id/relativeLayout"
        android:visibility="invisible"
        android:id="@+id/deleteModuleButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:text="@string/save_module_button"
...
        android:minHeight="0dp"
        android:textSize="20sp"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignEnd="@+id/relativeLayout"
        android:background="@color/mainAppColor"
        android:visibility="invisible"
        android:id="@+id/saveModuleButton" />

</RelativeLayout>

